@@ -11,6 +11,15 @@
 </head>
 
 <body class="psychostats">
+<noscript>
+    <style type="text/css">
+		#ps-container {ldelim}display: none;{rdelim}
+		noscript {ldelim}display: block;{rdelim}
+	</style>
+    <div id="error">
+        These pages will not display without javascript enabled.
+    </div>
+</noscript>
 <div id="ps-container">
 
 <!--#OVERALL_HEADER_MENU#-->
