@@ -50,6 +50,7 @@ Version 0.0.4b (in progress)
 * [Changed] Tweaks to to top help display.
 * [Added] Another check to see if stats have already been updated.
 * [Added] The ability to reset the last update time to the Admin CP.
+* [Changed] Pages will now display error message if javascript is disabled.
 
 Version 0.0.3b (01/16/2023)
 * [Added] Team rosters to team page.
